// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulaType [Block] basic "=BasicPage" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Block] basic "=BasicPage" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Date] basic "=DATE("1926-08-17")" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="DATE"
          data-type="any"
          style="color: #356cf9;"
        >
          DATE
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1926-08-17\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "1926-08-17"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="Date"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Date] basic "=DATE("1926-08-17")" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="DATE"
          data-type="any"
          style="color: #356cf9;"
        >
          DATE
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1926-08-17\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "1926-08-17"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="Date"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Divide by zero error] basic "=1/0" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Div"
          data-display="/"
          data-type="number"
        >
          /
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="0"
          data-type="number"
          style="color: #39b3e8;"
        >
          0
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Divide by zero error] basic "=1/0" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Div"
          data-display="/"
          data-type="number"
        >
          /
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="0"
          data-type="number"
          style="color: #39b3e8;"
        >
          0
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Empty] basic "=" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <br
          class="ProseMirror-trailingBreak"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Empty] basic "=" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Spreadsheet] basic "=BasicPage.spreadsheet" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Spreadsheet] basic "=BasicPage.spreadsheet" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Variable] basic "=BasicPage.bar" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0001-0000-000000000000\\",\\"name\\":\\"bar\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0001-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="bar"
          data-type="number"
          style="color: #d81b60;"
        >
          bar
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [Variable] basic "=BasicPage.bar" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0001-0000-000000000000\\",\\"name\\":\\"bar\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0001-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="bar"
          data-type="number"
          style="color: #d81b60;"
        >
          bar
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 1] basic "=SLEEP(123)" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="SLEEP"
          data-type="any"
          style="color: #356cf9;"
        >
          SLEEP
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="123"
          data-type="number"
          style="color: #39b3e8;"
        >
          123
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="number"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 1] basic "=SLEEP(123)" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="SLEEP"
          data-type="any"
          style="color: #356cf9;"
        >
          SLEEP
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="123"
          data-type="number"
          style="color: #39b3e8;"
        >
          123
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="number"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 2] basic "=BasicPage.lazy" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0002-0000-000000000000\\",\\"name\\":\\"lazy\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0002-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="lazy"
          data-type="number"
          style="color: #d81b60;"
        >
          lazy
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [async 2] basic "=BasicPage.lazy" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Variable\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"00000000-0000-0002-0000-000000000000\\",\\"name\\":\\"lazy\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"00000000-0000-0002-0000-000000000000\\"}}"
          data-code="Variable"
          data-display="lazy"
          data-type="number"
          style="color: #d81b60;"
        >
          lazy
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [cell] basic "=BasicPage.spreadsheet.first.1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-type="Column"
          style="color: #356cf9;"
        >
          first
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [cell] basic "=BasicPage.spreadsheet.first.1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-type="Column"
          style="color: #356cf9;"
        >
          first
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-errors="Circular dependency found"
          data-type="number"
          style="color: #39b3e8;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column1] basic "=BasicPage.spreadsheet.first" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-type="Column"
          style="color: #356cf9;"
        >
          first
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column1] basic "=BasicPage.spreadsheet.first" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Column\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"first\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"first\\"}}"
          data-code="Column"
          data-display="first"
          data-type="Column"
          style="color: #356cf9;"
        >
          first
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column2] basic "=BasicPage.spreadsheet.A" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicColumn\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"A\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"A\\"}}"
          data-code="Column"
          data-display="A"
          data-type="Column"
          style="color: #2cad94;"
        >
          A
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [column2] basic "=BasicPage.spreadsheet.A" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicColumn\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa2222-2222-2222-2222-222222222222\\",\\"name\\":\\"A\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"A\\"}}"
          data-code="Column"
          data-display="A"
          data-type="Column"
          style="color: #2cad94;"
        >
          A
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [literal string] basic "literal" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="literal"
          data-display="literal"
          data-type="any"
          style="color: #908B9C;"
        >
          literal
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [literal string] basic "literal" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="literal"
          data-display="literal"
          data-type="any"
          style="color: #908B9C;"
        >
          literal
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [parse error 1] basic "=1 ++ 1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="Missing expression"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [parse error 1] basic "=1 ++ 1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="Missing expression"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 1] basic "=1 +" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="Missing expression"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 1] basic "=1 +" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-errors="Missing expression"
          data-type="number"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          +
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 2] basic "=custom::ADD(1)" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionGroup"
          data-display="custom::"
          data-errors="Function custom::ADD not found"
          data-type="any"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          custom::
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="ADD"
          data-errors="Function custom::ADD not found"
          data-type="any"
          style="color: #356cf9;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          ADD
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="any"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [partial error 2] basic "=custom::ADD(1)" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionGroup"
          data-display="custom::"
          data-errors="Function custom::ADD not found"
          data-type="any"
          style="
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          custom::
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Function"
          data-display="ADD"
          data-errors="Function custom::ADD not found"
          data-type="any"
          style="color: #356cf9;; 
  text-decoration: underline;
  text-decoration-style: wavy;
  text-decoration-color: #cf1f28;
"
        >
          ADD
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LParen"
          data-display="("
          data-type="any"
        >
          (
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RParen"
          data-display=")"
          data-type="any"
        >
          )
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [row] basic "=BasicPage.spreadsheet.1" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicRow\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa3333-3333-3333-3333-333333333333\\",\\"name\\":\\"1\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"1\\"}}"
          data-code="Row"
          data-display="1"
          data-type="Row"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType [row] basic "=BasicPage.spreadsheet.1" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Block\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"name\\":\\"BasicPage\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa0000-0000-0000-0000-000000000000\\"}}"
          data-code="Block"
          data-display="BasicPage"
          data-type="Block"
          style="color: #356cf9;"
        >
          BasicPage
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"Spreadsheet\\",\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"id\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"name\\":\\"spreadsheet\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"id\\",\\"value\\":\\"aaaa1111-1111-1111-1111-111111111111\\"}}"
          data-code="Spreadsheet"
          data-display="spreadsheet"
          data-type="Spreadsheet"
          style="color: #356cf9;"
        >
          spreadsheet
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Dot"
          data-display="."
          data-type="any"
        >
          .
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-attrs="{\\"kind\\":\\"LogicRow\\",\\"namespaceId\\":\\"aaaa1111-1111-1111-1111-111111111111\\",\\"id\\":\\"aaaa3333-3333-3333-3333-333333333333\\",\\"name\\":\\"1\\",\\"findKey\\":{\\"namespaceId\\":\\"aaaa0000-0000-0000-0000-000000000000\\",\\"type\\":\\"name\\",\\"value\\":\\"1\\"}}"
          data-code="Row"
          data-display="1"
          data-type="Row"
          style="color: #39b3e8;"
        >
          1
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=   1 + 1 + 1   " 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-type="any"
        >
             
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-type="any"
        >
             
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=   1 + 1 + 1   " 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-type="any"
        >
             
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Plus"
          data-display="+"
          data-type="number"
        >
          +
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display="   "
          data-type="any"
        >
             
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "="string" & "fasd"" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Ampersand"
          data-display="&"
          data-type="string"
        >
          &
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"fasd\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "fasd"
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "="string" & "fasd"" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Ampersand"
          data-display="&"
          data-type="string"
        >
          &
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"fasd\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "fasd"
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[]" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[]" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[1,"1",false]" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "1"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=[1,"1",false]" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"1\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "1"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="any"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={}" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={}" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={a: 1,b: false, c: "string", d: [1]}" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="a"
          data-type="string"
          style="color: #d81b60;"
        >
          a
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="b"
          data-type="string"
          style="color: #d81b60;"
        >
          b
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="c"
          data-type="string"
          style="color: #d81b60;"
        >
          c
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="d"
          data-type="string"
          style="color: #d81b60;"
        >
          d
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "={a: 1,b: false, c: "string", d: [1]}" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBrace"
          data-display="{"
          data-type="any"
        >
          {
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="a"
          data-type="string"
          style="color: #d81b60;"
        >
          a
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="b"
          data-type="string"
          style="color: #d81b60;"
        >
          b
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="c"
          data-type="string"
          style="color: #d81b60;"
        >
          c
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="StringLiteral"
          data-display="\\"string\\""
          data-type="string"
          style="color: #d81b60;"
        >
          "string"
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Comma"
          data-display=","
          data-type="Record"
        >
          ,
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="FunctionName"
          data-display="d"
          data-type="string"
          style="color: #d81b60;"
        >
          d
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Colon"
          data-display=":"
          data-type="Record"
        >
          :
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="LBracket"
          data-display="["
          data-type="any"
        >
          [
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NumberLiteral"
          data-display="1"
          data-type="number"
          style="color: #39b3e8;"
        >
          1
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBracket"
          data-display="]"
          data-type="any"
        >
          ]
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="RBrace"
          data-display="}"
          data-type="any"
        >
          }
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=null" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="NullLiteral"
          data-display="null"
          data-type="null"
          style="color: #6d47b9;"
        >
          null
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=null" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="NullLiteral"
          data-display="null"
          data-type="null"
          style="color: #6d47b9;"
        >
          null
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=true && false" 1`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="true"
          data-type="boolean"
          style="color: #2cad94;"
        >
          true
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="And"
          data-display="&&"
          data-type="boolean"
        >
          &&
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
      </p>
    </div>
  </div>
</div>
`;

exports[`formulaType basic "=true && false" 2`] = `
<div>
  <div>
    <div
      class="ProseMirror"
      contenteditable="true"
      tabindex="0"
      translate="no"
    >
      <p>
        <mark
          class="mashcard-formula-mark"
          data-code="Equal"
          data-display="="
          data-type="any"
        >
          =
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="true"
          data-type="boolean"
          style="color: #2cad94;"
        >
          true
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="And"
          data-display="&&"
          data-type="boolean"
        >
          &&
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="Space"
          data-display=" "
          data-type="any"
        >
           
        </mark>
        <mark
          class="mashcard-formula-mark"
          data-code="BooleanLiteral"
          data-display="false"
          data-type="boolean"
          style="color: #cf1f28;"
        >
          false
        </mark>
      </p>
    </div>
  </div>
</div>
`;
